# evc-team-relay

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md
apps/control-plane/: .gitignore  Dockerfile  IMPLEMENTATION_SSR_INVITE_PAGE.md  INVITE_LINKS_IMPLEMENTATION.md  Makefile  pyproject.toml
apps/control-plane/app/: main.py
apps/control-plane/app/api/: deps.py
apps/control-plane/app/core/: config.py  logging.py  metrics.py  security.py
apps/control-plane/app/db/: models.py  session.py
apps/control-plane/app/middleware/: __init__.py  errors.py  logging.py  metrics.py
apps/control-plane/app/schemas/: audit.py  auth.py  branding.py  dashboard.py  invite.py  key.py  oauth.py  share.py  token.py  user.py  webhook.py
apps/control-plane/app/services/: audit_service.py  auth_service.py  dashboard_service.py  email_service.py  instance_settings_service.py  invite_service.py  notification_service.py  oauth_service.py  password_service.py  session_service.py  share_service.py  token_service.py  totp_service.py  user_service.py  verification_service.py  web_session_service.py  webhook_service.py
apps/control-plane/app/templates/: base.html  email_verification.html  invite.html  password_reset.html
apps/control-plane/app/utils/: slug.py  url.py
apps/control-plane/app/workers/: email_worker.py  webhook_worker.py
apps/control-plane/tests/: conftest.py  test_audit_logs.py  test_auth_shares.py  test_branding.py  test_cwt_tokens.py  test_dashboard.py  test_email_verification.py  test_error_handling.py  test_folder_shares.py  test_invites.py  test_logging.py  test_metrics.py  test_oauth.py  test_operational.py  test_password_reset.py  test_refresh_token.py  test_relay_token_endpoint.py  test_security.py  test_server_info.py  test_sessions.py  test_totp.py  test_url_utils.py  test_web_publish.py  test_web_sync_mode.py
apps/control-plane/tests/e2e/: __init__.py
(+158 files in other folders)
